package com.starkindustries.domain;

public enum SensorType {
    TEMP, HUM, MOTION
}
