package com.starkindustries.domain.repository;

import com.starkindustries.domain.MotionReading;
import org.springframework.data.jpa.repository.JpaRepository;

public interface MotionReadingRepo extends JpaRepository<MotionReading, Long> { }
